force-app/main/default/objects/Contract/fields/Addendum_Details_Scope__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Details_Scope__c</fullName>
    <label>Addendum Details/Scope</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>