force-app/main/default/objects/Contract/fields/Addendum_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Signed_Date__c</fullName>
    <label>Addendum Signed Date</label>
    <type>Date</type>
</CustomField>