force-app/main/default/objects/Contract/fields/Auto_Renewal_Clause__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Renewal Clause?</label>
    <type>Checkbox</type>
</CustomField>