force-app/main/default/objects/Contract/fields/Contract_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Contract_Addendum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Addendum</label>
    <type>Checkbox</type>
</CustomField>