force-app/main/default/objects/Contract/fields/CPI_Increase_Clause__c.field-meta.xml
<CustomField>
    <fullName>CPI_Increase_Clause__c</fullName>
    <label>CPI Increase Clause</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>