force-app/main/default/objects/Contract/fields/Details_of_Break_Termination_Clause__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Break_Termination_Clause__c</fullName>
    <label>Details of Break/Termination Clause</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>