force-app/main/default/objects/Contract/fields/Initial_Term_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term_Expiry__c</fullName>
    <label>Initial Term Expiry</label>
    <type>Date</type>
</CustomField>